Fix PMP-adformat item alignment problems.

--- a/less/pmp.less
+++ b/less/pmp.less
@@ -58,6 +58,10 @@
       background-color: #FC981C;
     }
 
+    .description {
+      padding: 0 @description-padding 0 @description-padding;
+    }
+
     .gif {
       .flex-container-center();
       .flex-container-overlap();
@@ -107,8 +111,9 @@
             img {
               margin: auto 0;
             }
-            p {
+            .title {
               margin: auto;
+              width: 100%;
             }
           }
         }
